<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all products</string>
    <string name="empty_view_title_text">There are no products here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_activity_title_new_product">Add a product</string>
    <string name="editor_activity_title_edit_product">Edit product</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="hint_product_supplier_name">Supplier name</string>
    <string name="hint_product_supplier_phone">Supplier phone</string>
    <string name="detail_product_title">Product detail</string>
    <string name="supplier_order_button">Order more supplies</string>
    <string name="product_unavailable">Product unavailable</string>
    <string name="product_price">Price:\u0020</string>
    <string name="product_quantity">Quantity:\u0020</string>
    <string name="currency">\u0020$</string>
    <string name="fill_all_fields">Please fill out all values</string>
</resources>
