<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_text_product_name"
            style="@style/ProductLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height"
            android:gravity="center_vertical"
            android:text="@string/hint_product_name" />

        <TextView
            android:id="@+id/text_product_price_label"
            style="@style/ProductLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height"
            android:gravity="center_vertical"
            android:text="@string/hint_product_price" />

        <TextView
            android:id="@+id/text_product_quantity_label"
            style="@style/ProductLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height"
            android:gravity="center_vertical"
            android:text="@string/hint_product_quantity" />

        <TextView
            android:id="@+id/text_product_supplier_name_label"
            style="@style/ProductLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height"
            android:gravity="center_vertical"
            android:text="@string/hint_product_supplier_name" />

        <TextView
            android:id="@+id/text_product_supplier_phone_label"
            style="@style/ProductLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height"
            android:gravity="center_vertical"
            android:text="@string/hint_product_supplier_phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_product_name"
            style="@style/ProductStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height" />

        <TextView
            android:id="@+id/text_product_price"
            style="@style/ProductStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_decrease_quantity"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginRight="@dimen/button_detail_margin_right"
                android:layout_marginTop="@dimen/button_detail_margin_top"
                android:background="@drawable/shape_button"
                android:src="@drawable/ic_remove"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/text_product_quantity"
                style="@style/ProductStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_view_detail_height" />

            <ImageButton
                android:id="@+id/button_increase_quantity"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginLeft="@dimen/button_detail_margin_left"
                android:background="@drawable/shape_button"
                android:layout_marginTop="@dimen/button_detail_margin_top"
                android:src="@drawable/ic_add"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_product_supplier_name"
            style="@style/ProductStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_detail_height" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/button_call_supplier"
                android:layout_width="@dimen/button_size"
                android:layout_height="@dimen/button_size"
                android:layout_marginRight="@dimen/button_detail_margin_right"
                android:layout_marginTop="@dimen/button_detail_margin_top"
                android:background="@drawable/shape_button"
                android:padding="@dimen/button_call_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/text_product_supplier_phone"
                style="@style/ProductStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_view_detail_height" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>